[gd_scene format=3 uid="uid://do20vv0rhjjnf"]

[ext_resource type="Script" uid="uid://cf1ulg3ime6vw" path="res://scripts/player.gd" id="1_uaxgb"]
[ext_resource type="Texture2D" uid="uid://ch3tu6atbdr1n" path="res://sprites/lander_1.png" id="2_ybou7"]
[ext_resource type="Script" uid="uid://djgsx3uii5x0n" path="res://scripts/particle_controller.gd" id="3_jt41n"]
[ext_resource type="Texture2D" uid="uid://mk56k80xr5fc" path="res://sprites/thrust_particle.png" id="3_umv85"]
[ext_resource type="Script" uid="uid://csflsjq2bit3f" path="res://scripts/thrust_particle.gd" id="4_24335"]
[ext_resource type="Texture2D" uid="uid://cci738880qakw" path="res://sprites/RCV_particle.png" id="5_x222i"]
[ext_resource type="Script" uid="uid://b5ibbvl0n4box" path="res://scripts/rcs/rcs1.gd" id="7_0rccx"]
[ext_resource type="Material" uid="uid://ckptdalejtl4d" path="res://materials/rcs.tres" id="7_jej6c"]
[ext_resource type="Script" uid="uid://jqt6rg36glnm" path="res://scripts/rcs/rcs2.gd" id="7_sduud"]
[ext_resource type="Script" uid="uid://cur5jxrm7pam3" path="res://scripts/rcs/rcs3.gd" id="8_yetpw"]
[ext_resource type="Script" uid="uid://dmcieq7lbcoyh" path="res://scripts/rcs/rcs4.gd" id="10_6exp8"]
[ext_resource type="Script" uid="uid://bkdtil23hwk4h" path="res://scripts/rcs/rcs5.gd" id="11_qcpox"]
[ext_resource type="Script" uid="uid://csa57ip858sgq" path="res://scripts/rcs/rcs6.gd" id="12_bbjyt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jej6c"]
friction = 0.44
bounce = 0.2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jej6c"]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_4i5il"]
_limits = [0.0, 5.5, 0.0, 1.0]
_data = [Vector2(0, 5.5), 0.0, 0.0, 0, 0, Vector2(0.25625, 3.6207757), -5.011261, -5.011261, 0, 0, Vector2(0.615625, 4.0234666), 0.0, 0.0, 0, 0, Vector2(0.91562504, 5.5), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_vucto"]
curve = SubResource("Curve_4i5il")

[sub_resource type="Gradient" id="Gradient_f1ej7"]
offsets = PackedFloat32Array(0.32312927, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oprun"]
gradient = SubResource("Gradient_f1ej7")

[sub_resource type="Curve" id="Curve_jej6c"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.67187506, 1.2984982), 1.9141614, 1.9141614, 0, 0, Vector2(1, 2.4374218), 5.5784025, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_f1ej7"]
curve = SubResource("Curve_jej6c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rkguu"]
lifetime_randomness = 0.06
particle_flag_disable_z = true
angle_min = -47.89999
angle_max = 96.20001
spread = 7.46
initial_velocity_min = 406.41
initial_velocity_max = 406.41
angular_velocity_min = -197.09001
angular_velocity_max = -24.130016
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false
scale_min = 2.5
scale_max = 3.5
scale_curve = SubResource("CurveTexture_f1ej7")
color_ramp = SubResource("GradientTexture1D_oprun")
hue_variation_max = 0.01
anim_speed_min = 0.17
anim_speed_max = 0.43
anim_speed_curve = SubResource("CurveTexture_vucto")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6vx61"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcno6"]
size = Vector2(61, 88)

[node name="Player" type="RigidBody2D" unique_id=1461010646]
position = Vector2(-6.77626e-21, 5.42101e-20)
physics_material_override = SubResource("PhysicsMaterial_jej6c")
gravity_scale = 0.1
inertia = 1.36
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_uaxgb")
speed = 200.0
speed_limit = 197

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=799995008]
texture_filter = 1
position = Vector2(2, -41)
texture = ExtResource("2_ybou7")

[node name="particle_controller" type="Node2D" parent="." unique_id=911741720]
script = ExtResource("3_jt41n")

[node name="thrust_particle" type="GPUParticles2D" parent="particle_controller" unique_id=92246468]
texture_filter = 1
texture_repeat = 1
material = SubResource("CanvasItemMaterial_jej6c")
position = Vector2(0, 46)
rotation = 1.5708
emitting = false
amount = 48
texture = ExtResource("3_umv85")
lifetime = 0.25
explosiveness = 0.02
randomness = 0.15
fixed_fps = 60
collision_base_size = 9.04
trail_lifetime = 1.04
trail_sections = 2
trail_section_subdivisions = 1
process_material = SubResource("ParticleProcessMaterial_rkguu")
script = ExtResource("4_24335")

[node name="rcs1" type="GPUParticles2D" parent="particle_controller" unique_id=1311182676]
texture_filter = 1
material = SubResource("CanvasItemMaterial_6vx61")
position = Vector2(31, -20)
rotation = -1.5708
emitting = false
amount = 12
texture = ExtResource("5_x222i")
lifetime = 0.13
process_material = ExtResource("7_jej6c")
script = ExtResource("7_0rccx")

[node name="rcs2" type="GPUParticles2D" parent="particle_controller" unique_id=363454078]
texture_filter = 1
material = SubResource("CanvasItemMaterial_6vx61")
position = Vector2(39, -8)
emitting = false
amount = 12
texture = ExtResource("5_x222i")
lifetime = 0.2
local_coords = true
process_material = ExtResource("7_jej6c")
script = ExtResource("7_sduud")

[node name="rcs3" type="GPUParticles2D" parent="particle_controller" unique_id=1420706040]
texture_filter = 1
material = SubResource("CanvasItemMaterial_6vx61")
position = Vector2(31, 4)
rotation = 1.5708
emitting = false
amount = 12
texture = ExtResource("5_x222i")
lifetime = 0.2
process_material = ExtResource("7_jej6c")
script = ExtResource("8_yetpw")

[node name="rcs4" type="GPUParticles2D" parent="particle_controller" unique_id=355245792]
texture_filter = 1
material = SubResource("CanvasItemMaterial_6vx61")
position = Vector2(-34, 5)
rotation = 1.5708
emitting = false
amount = 12
texture = ExtResource("5_x222i")
lifetime = 0.2
process_material = ExtResource("7_jej6c")
script = ExtResource("10_6exp8")

[node name="rcs5" type="GPUParticles2D" parent="particle_controller" unique_id=1157977824]
texture_filter = 1
material = SubResource("CanvasItemMaterial_6vx61")
position = Vector2(-44, -9)
rotation = 3.14159
emitting = false
amount = 12
texture = ExtResource("5_x222i")
lifetime = 0.2
process_material = ExtResource("7_jej6c")
script = ExtResource("11_qcpox")

[node name="rcs6" type="GPUParticles2D" parent="particle_controller" unique_id=1637043945]
texture_filter = 1
material = SubResource("CanvasItemMaterial_6vx61")
position = Vector2(-34, -22)
rotation = -1.5708
emitting = false
amount = 12
texture = ExtResource("5_x222i")
lifetime = 0.2
process_material = ExtResource("7_jej6c")
script = ExtResource("12_bbjyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=681511849]
position = Vector2(-0.5, 10)
shape = SubResource("RectangleShape2D_mcno6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tank_empty" from="." to="particle_controller/thrust_particle" method="_on_player_tank_empty"]
[connection signal="RCS1" from="particle_controller" to="particle_controller/rcs1" method="_on_particle_controller_rcs_1"]
[connection signal="RCS1off" from="particle_controller" to="particle_controller/rcs1" method="_on_particle_controller_rcs_1_off"]
[connection signal="RCS2" from="particle_controller" to="particle_controller/rcs2" method="_on_particle_controller_rcs_2"]
[connection signal="RCS2off" from="particle_controller" to="particle_controller/rcs2" method="_on_particle_controller_rcs_2_off"]
[connection signal="RCS3" from="particle_controller" to="particle_controller/rcs3" method="_on_particle_controller_rcs_3"]
[connection signal="RCS3off" from="particle_controller" to="particle_controller/rcs3" method="_on_particle_controller_rcs_3_off"]
[connection signal="RCS4" from="particle_controller" to="particle_controller/rcs4" method="_on_particle_controller_rcs_4"]
[connection signal="RCS4off" from="particle_controller" to="particle_controller/rcs4" method="_on_particle_controller_rcs_4_off"]
[connection signal="RCS5" from="particle_controller" to="particle_controller/rcs5" method="_on_particle_controller_rcs_5"]
[connection signal="RCS5off" from="particle_controller" to="particle_controller/rcs5" method="_on_particle_controller_rcs_5_off"]
[connection signal="RCS6" from="particle_controller" to="particle_controller/rcs6" method="_on_particle_controller_rcs_6"]
[connection signal="RCS6off" from="particle_controller" to="particle_controller/rcs6" method="_on_particle_controller_rcs_6_off"]
